--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@11ty/eleventy": "^0.10.0",
     "autoprefixer": "^9.7.5",
     "cssnano": "^4.1.10",
+    "dayjs": "^1.8.23",
     "html-validator-cli": "^7.0.0",
     "markuplint": "^1.0.0-alpha.38",
     "npm-run-all": "^4.1.5",
