--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "author": "masuP9 <masuP9@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build:prod": "NODE_ENV=production eleventy",
+    "build:prod": "NODE_ENV=production npm-run-all -p build build:css",
     "build": "eleventy",
     "build:css": "postcss src/style/main.css --config postcss.config.js --output docs/style.css",
     "watch": "DEBUG=Eleventy* eleventy --serve",
     "watch:css": "yarn build:css --watch",
     "dev": "npm-run-all -p watch watch:css",
+    "clear": "rimraf docs",
     "lint:html": "markuplint docs/index.html --ruleset ./markuplintrc",
     "lint:css": "stylelint src/styles/*",
     "validate:html": "html-validator --file=docs/index.html --verbose",
@@ -30,6 +31,7 @@
     "postcss-custom-properties": "^9.1.1",
     "postcss-import": "^12.0.1",
     "prettier": "^2.0.2",
+    "rimraf": "^3.0.2",
     "stylelint": "^13.2.1",
     "stylelint-config-recommended": "^3.0.0",
     "typescript": "^3.8.3",
