--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "npm-run-all -p watch watch:css",
     "clear": "rimraf docs",
     "lint:html": "markuplint docs/index.html --ruleset ./markuplintrc",
-    "lint:css": "stylelint src/styles/*",
+    "lint:css": "stylelint src/style/*",
     "validate:html": "html-validator --file=docs/index.html --verbose",
     "test": "npm-run-all -p lint:** validate:html \"prettier --check\"",
     "prettier": "prettier src/**/*"
