--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "watch:css": "yarn build:css --watch",
     "dev": "npm-run-all -p watch watch:css",
     "clear": "rimraf docs",
-    "lint:html": "markuplint docs/index.html --ruleset ./markuplintrc",
+    "lint:html": "markuplint docs/**/*.html --ruleset ./markuplintrc",
     "lint:css": "stylelint src/style/*",
-    "validate:html": "html-validator --file=docs/index.html --verbose",
+    "validate:html": "html-validator --file=docs/parenting-who/index.html --verbose",
     "test": "npm-run-all -p lint:** validate:html \"prettier --check\"",
-    "prettier": "prettier src/**/*"
+    "prettier": "prettier src/**/*.css"
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
