--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "masuP9 <masuP9@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build:prod": "NODE_ENV=production npm-run-all -p build build:css",
+    "build:prod": "NODE_ENV=production npm-run-all -p build build:css build:js",
     "build": "eleventy",
     "build:css": "postcss src/style/main.css --config postcss.config.js --output docs/style.css",
+    "build:js": "webpack",
     "watch": "DEBUG=Eleventy* eleventy --serve",
     "watch:css": "yarn build:css --watch",
-    "dev": "npm-run-all -p watch watch:css",
+    "watch:js": "webpack --watch --mode development",
+    "dev": "npm-run-all -p watch watch:css watch:js",
     "clear": "rimraf docs",
     "lint:html": "markuplint docs/**/*.html --ruleset ./markuplintrc",
     "lint:css": "stylelint src/style/*",
@@ -34,6 +36,7 @@
     "rimraf": "^3.0.2",
     "stylelint": "^13.2.1",
     "stylelint-config-recommended": "^3.0.0",
+    "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
