--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "repository": "git@github.com:masuP9/content-who-parents.git",
   "author": "masuP9 <masuP9@gmail.com>",
-  "license": "MIT",
+  "license": "CC BY-NC-SA 4.0",
   "scripts": {
     "build:prod": "NODE_ENV=production npm-run-all -p build build:css build:js",
     "build": "eleventy",
