--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,9 @@
 [[redirects]]
   from = "/"
-  to = "/parenting-who/"
+  to = "/parenting-who"
   status = 302
+
+[[redirects]]
+  from = "/publish"
+  to = "https://publish-covid-19-act.netlify.com"
+  status = 301
