npm run-script をリファクタリングした

--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "author": "Takehiro Kawase <info@polaar.jp>",
   "license": "CC BY-NC-SA 4.0",
   "scripts": {
-    "build:prod": "NODE_ENV=production npm-run-all -p build build:css build:js",
-    "build": "eleventy",
+    "build:prod": "NODE_ENV=production npm-run-all -p build:*",
+    "build:html": "eleventy",
     "build:css": "postcss src/style/main.css --config postcss.config.js --output docs/style.css",
     "build:js": "webpack",
-    "watch": "DEBUG=Eleventy* eleventy --serve",
+    "watch:html": "DEBUG=Eleventy* yarn build:html --serve",
     "watch:css": "yarn build:css --watch",
-    "watch:js": "webpack --watch --mode development",
-    "dev": "npm-run-all -p watch watch:css watch:js",
+    "watch:js": "yarn build:js --watch --mode development",
+    "dev": "npm-run-all -p watch:*",
     "clear": "rimraf docs",
     "lint:html": "markuplint docs/**/*.html --ruleset ./markuplintrc",
     "lint:css": "stylelint src/style/*",
     "validate:html": "html-validator --file=docs/index.html --verbose",
-    "test": "npm-run-all -p lint:** validate:html \"prettier --check\"",
+    "test": "npm-run-all -p lint:* validate:html \"prettier --check\"",
     "prettier": "prettier src/**/*.css"
   },
   "devDependencies": {
