--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: install dependencies
         run: yarn install
-      - name: build:prod
-        run: yarn build
+      - name: build:html
+        run: yarn build:html
       - name: test
         run: yarn test
